[package]
name = "rbq"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", features = ["std"] }
arrow = { version = "51.0.0", features = ["prettyprint"]  } 
parquet = { version = "51.0.0", features = ["async"]  } 
tokio = { version = "1.37.0", features = ["full"] }
clap = { version= "4.5.4", features=["derive"] }

[[bin]]
name = "rbq"
path = "src/cli.rs"
